# interact

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  install.sh  pyproject.toml
.claude/skills/release/: SKILL.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/research/: INDEX.md  dev-tool-landing-pages.md  touch-input-nested-sandbox.md
.github/workflows/: ci.yml  integration.yml
docs/: index.html
scripts/: scan_client_errors.py
src/interact/: __init__.py  actions.py  api_types.py  atspi.py  browser.py  cli.py  clients.py  config.py  critique.py  debug_utils.py  desktop.py  desktop_backend.py  detect.py  dispatch.py  dotenv_loader.py  feedback.py  formats.py  frames.py  launch.py  models.py  parsing.py  probe.py  render.py  runtime.py  server.py  server_registry.py  settings_schema.py  state.py  tui.py  update.py  usage.py  versioning.py  view.py  vision.py
src/interact/actions/: __init__.py  dispatch.py  models.py
src/interact/benchmarks/: __init__.py  published.py  upstream.py
src/interact/cli/: __init__.py  app.py  render.py  tui.py  update.py  usage.py  view.py
src/interact/config/: __init__.py  schema.py  settings.py  user.py
src/interact/data/: __init__.py  benchmarks.json  models.json  published_scores.json  settings.json
src/interact/server/: vlm.py  (+9 more)
tests/: MANUAL_TEST.md  conftest.py  test_actions.py  test_atspi.py  test_backend_spawn.py  test_browser.py  test_browser_actions.py  test_browser_launch.py  test_capture_freshness.py  test_clients_status.py  test_config.py  test_config_logging.py  test_core_transcribe.py  test_cross_platform.py  test_debug_dir.py  test_desktop.py  test_desktop_backend.py  test_desktop_integration.py  test_desktop_scenario.py  test_dialogs.py  test_dispatch_scroll.py  test_dotenv.py  test_emulate_device.py  test_evaluate_js.py  test_extension_manifest.py  test_feedback.py  test_flutter_launch.py  test_formats.py  test_frames.py  test_geometry.py  test_grounding_capability.py  test_hover_settle.py  test_image_source.py  test_iteration_feedback.py  test_key_chords.py  test_launch_shell.py  test_live_config.py  test_measure.py  test_modality_capability.py  test_models.py  (+39 more)
tests/e2e/: README.py  conftest.py  harness.py  test_detect.py  test_extension_statusbar.py
tests/fixtures/: dom_elements.js  drag_window.py  panel.py  scenario_page.html  test_gui.py  test_page.html
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/scripts/: generate-benchmarks.py  generate-models.py  generate-types.sh  sync-data.js
vscode-extension/src/: currency.ts  dashboard.ts  extension.ts  shared.ts  usage.ts
vscode-extension/webview/: app.tsx  jsx-runtime.ts  styles.css  tsconfig.json
(+17 files in other folders)
