[project]
name = "interact"
version = "0.11.1"
description = "MCP server for browser + desktop automation with vision analysis"
readme = "README.md"
authors = [{ name = "Alan Blanchet", email = "alan@alan-blanchet.fr" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "automation", "browser", "desktop", "playwright", "vision", "agent", "llm"]
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=3.0",
    "rich>=13.0",
    "evdev>=1.9; sys_platform == 'linux'", # /dev/uinput absolute input (X11 + Wayland)
    "python-xlib>=0.33; sys_platform == 'linux'", # enumerate override-redirect popups to composite into captures (#31)
    "mss>=9.0", # cross-platform screen capture for the macOS/Windows desktop backend (#24)
    "pynput>=1.7", # cross-platform pointer + keyboard for the macOS/Windows desktop backend (#24)
    "httpx>=0.28.1",
    "litellm>=1.83.4",
    "mcp[cli]>=1.27.0",
    "numpy>=1.26",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "datasets>=2.20",
    "textual>=8.2.7",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/AlanBlanchet/interact"
Repository = "https://github.com/AlanBlanchet/interact"
Issues = "https://github.com/AlanBlanchet/interact/issues"
Changelog = "https://github.com/AlanBlanchet/interact/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic-to-typescript>=2.0.0",
    "pytest-timeout>=2.3",
]

[project.optional-dependencies]
e2e = ["pytesseract>=0.3.10", "pillow>=12.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interact"]
artifacts = ["src/interact/js/*.js", "src/interact/data/*.json"]

[project.scripts]
interact = "interact.cli:main"
interact-fetch-upstream = "interact.benchmarks.upstream:_main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["tests/fixtures", "tests/e2e"]
# Per-test timeout so a test that hangs (e.g. on Windows) FAILS with a traceback instead of
# blocking the whole job forever. "thread" method works on Windows (signal/SIGALRM is Unix-only).
timeout = 90
timeout_method = "thread"
markers = [
    "integration: tests that require external API calls and a real browser",
    "desktop: tests that require a live X11 display and AT-SPI",
]
